<resources>
    <string name="app_name">Currency converter</string>
    <string name="sell">Sell</string>
    <string name="my_balances">MY BALANCES</string>
    <string name="currency_exchange">CURRENCY EXCHANGE</string>
    <string name="submit">Submit</string>
    <string name="receive">Receive</string>
    <string name="_1000_00_eur">1000.00 EUR</string>
    <string name="_0_00_usd">0.00 USD</string>
    <string name="_0_00_bgn">0.00 BGN</string>
    <string name="zero">0</string>
    <string name="appLabel">Currency converter</string>
    <string name="euro">\u0020 EUR </string>
    <string name="usd">\u0020 USD </string>
    <string name="bgn">\u0020 BGN </string>
    <string name="plus_sign">+</string>
    <string name="Done">Done</string>
    <string name="currency_converted">Currency converted</string>
    <string name="done">Done</string>
    <string name="dialog_text">You have converted 100 EUR to 112.90 USD. Commission Fee - 0.7.</string>
    <string name="Erro_occurred">An error occurred</string>

    <string-array name="currency_array">
        <item>EUR</item>
        <item>RUB</item>
        <item>USD</item>
        <item>BGN</item>
        <item>CAD</item>
        <item>HKD</item>
        <item>ISK</item>
        <item>PHP</item>
        <item>DKK</item>
        <item>HUF</item>
        <item>CZK</item>
        <item>AUD</item>
        <item>RON</item>
        <item>SEK</item>
        <item>IDR</item>
        <item>INR</item>
        <item>BRL</item>
        <item>HRK</item>
        <item>JPY</item>
        <item>THB</item>
        <item>CHF</item>
        <item>SGD</item>
        <item>PLN</item>
        <item>CNY</item>
        <item>NOK</item>
        <item>NZD</item>
        <item>ZAR</item>
        <item>MXN</item>
        <item>ILS</item>
        <item>GBP</item>
        <item>KRW</item>
        <item>MYR</item>
    </string-array>

</resources>