<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="265dp"
    android:layout_height="wrap_content"
    android:background="@drawable/layout_bg"
    android:orientation="vertical">


    <TextView
        android:id="@+id/dialogTitleTv"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/dimens_16_sp"
        android:layout_marginTop="@dimen/dimens_10_dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/currency_converted" />

    <TextView
        android:id="@+id/dialogTextTv"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/dimens_14_sp"
        android:layout_margin="@dimen/dimens_7_dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_text" />

    <View
        android:id="@+id/firstDevider"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dimens_10_dp"
        android:layout_height="0.3dp"
        android:background="@color/light_grey" />

    <Button
        android:id="@+id/dialogDoneBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/white"
        android:textSize="@dimen/dimens_16_sp"
        android:text="@string/Done"
        android:layout_marginBottom="@dimen/dimens_5_dp"
        android:background="@android:color/transparent"
        android:textAllCaps="false"
        android:textColor="@color/kahu_blue"
        android:textStyle="bold" />
</LinearLayout>