<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.CurrencyActivity">

    <Spinner
        android:id="@+id/receiveSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_40_dp"
        android:layout_marginEnd="@dimen/dimens_8_dp"
        android:backgroundTint="@color/black"
        android:entries="@array/currency_array"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sellSpinner" />

    <View
        android:id="@+id/secondDevider"
        android:layout_width="@dimen/dimens_290_dp"
        android:layout_height="@dimen/dimens_0.3_dp"
        android:layout_marginTop="@dimen/dimens_8_dp"
        android:background="@color/light_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/receiveEditText" />

    <ImageView
        android:id="@+id/buyIv"
        android:layout_width="@dimen/dimens_40_dp"
        android:layout_height="@dimen/dimens_40_dp"
        android:padding="@dimen/dimens_7_dp"
        android:layout_marginStart="@dimen/dimens_32_dp"
        android:background="@drawable/img_circle"
        android:backgroundTint="@color/green"
        app:layout_constraintBottom_toBottomOf="@+id/receiveTv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/receiveTv"
        app:srcCompat="@drawable/arrow_down" />

    <EditText
        android:id="@+id/receiveEditText"
        android:layout_width="@dimen/dimens_70_dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimens_16_dp"
        android:ems="10"
        android:hint="@string/zero"
        android:inputType="numberDecimal"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        app:layout_constraintBottom_toBottomOf="@+id/receiveSpinner"
        app:layout_constraintEnd_toStartOf="@+id/receiveSpinner"
        app:layout_constraintTop_toTopOf="@+id/receiveSpinner"
        app:layout_constraintVertical_bias="0.714"
        tools:text="110.30" />

    <TextView
        android:id="@+id/sellTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_28_dp"
        android:layout_marginBottom="@dimen/dimens_12_dp"
        android:text="@string/sell"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/dimens_14_sp"
        app:layout_constraintBottom_toBottomOf="@+id/sellEditText"
        app:layout_constraintStart_toEndOf="@+id/sellIv" />


    <TextView
        android:id="@+id/myBalanceTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_28_dp"
        android:layout_marginTop="@dimen/dimens_16_dp"
        android:text="@string/my_balances"
        android:textColor="@color/grey"
        android:textSize="@dimen/dimens_11_sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/firstDevider"
        android:layout_width="@dimen/dimens_290_dp"
        android:layout_height="@dimen/dimens_0.3_dp"
        android:layout_marginTop="@dimen/dimens_8_dp"
        android:background="@color/light_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sellEditText" />

    <TextView
        android:id="@+id/euroTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_28_dp"
        android:layout_marginTop="@dimen/dimens_20_dp"
        android:text="@string/_1000_00_eur"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/dimens_14_sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myBalanceTv" />

    <TextView
        android:id="@+id/usdTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/dimens_14_sp"
        app:layout_constraintEnd_toStartOf="@+id/bgnTv"
        app:layout_constraintStart_toEndOf="@+id/euroTv"
        app:layout_constraintTop_toTopOf="@+id/euroTv"
        android:text="@string/_0_00_usd" />

    <TextView
        android:id="@+id/bgnTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimens_28_dp"
        android:text="@string/_0_00_bgn"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/dimens_14_sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/usdTv" />

    <TextView
        android:id="@+id/exchangeTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_28_dp"
        android:layout_marginBottom="@dimen/dimens_16_dp"
        android:text="@string/currency_exchange"
        android:textColor="@color/grey"
        android:textSize="@dimen/dimens_11_sp"
        app:layout_constraintBottom_toTopOf="@+id/sellEditText"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="@dimen/dimens_280_dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_20_dp"
        android:background="@drawable/shape"
        android:backgroundTint="@color/black"
        android:foreground="?android:attr/selectableItemBackground"
        android:elevation="@dimen/dimens_10_dp"
        android:text="@string/submit"
        android:textColor="@color/white"
        app:backgroundTint="@color/kahu_blue"
        app:circularflow_defaultRadius="@dimen/cardview_compat_inset_shadow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secondDevider" />

    <TextView
        android:id="@+id/receiveTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_28_dp"
        android:layout_marginBottom="@dimen/dimens_12_dp"
        android:text="@string/receive"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/dimens_14_sp"
        app:layout_constraintBottom_toBottomOf="@+id/receiveEditText"
        app:layout_constraintStart_toEndOf="@+id/buyIv" />

    <EditText
        android:id="@+id/sellEditText"
        android:layout_width="@dimen/dimens_70_dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimens_16_dp"
        android:ems="10"
        android:hint="@string/zero"
        android:inputType="numberDecimal"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        app:layout_constraintBottom_toBottomOf="@+id/sellSpinner"
        app:layout_constraintEnd_toStartOf="@+id/sellSpinner"
        app:layout_constraintTop_toTopOf="@+id/sellSpinner"
        tools:text="100.00" />

    <ImageView
        android:id="@+id/sellIv"
        android:layout_width="@dimen/dimens_40_dp"
        android:layout_height="@dimen/dimens_40_dp"
        android:layout_marginStart="@dimen/dimens_32_dp"
        android:padding="@dimen/dimens_7_dp"
        android:background="@drawable/img_circle"
        android:backgroundTint="@color/red"
        app:layout_constraintBottom_toBottomOf="@+id/sellTv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sellTv"
        app:srcCompat="@drawable/arrow_up" />

    <Spinner
        android:id="@+id/sellSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_68_dp"
        android:layout_marginEnd="@dimen/dimens_8_dp"
        android:backgroundTint="@color/black"
        android:entries="@array/currency_array"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bgnTv" />

</androidx.constraintlayout.widget.ConstraintLayout>